# sep-kc

./: .gitignore  EmployeeManagementApp.sln  LICENSE  README.md  coffe.json  data.json  index.html  index.js  left-panel.css  machine.css  main.js  pyproject.toml  readme.md  script.js  status.md  status.txt  style.css
Anjusha/: CoffeeMachine.ini  CoffeeMachine.lvlps  CoffeeMachine.lvproj  Status.txt  main.vi
AristoVinceS/: EmployeeAndTaskScheduler.sln
Ashiq/: index.html  script-utils.js  status.txt  style.css  webjs.js
Assessment-1/: Coffee Machine.aliases  Coffee Machine.lvlps  Coffee Machine.lvproj  Status.txt  main.vi
Coffee Vending Machine/: Coffee.ini  CoffeeVendingMachine.aliases  CoffeeVendingMachine.lvlps  CoffeeVendingMachine.lvproj  Main.vi
CoffeeMachine/: CoffeeMachine.aliases  CoffeeMachine.lvlps  CoffeeMachine.lvproj  Main.vi
Danush/: README.md  coffee.json  index.html  script.js  style.css
EmployeeManager/: Employee.cs  EmployeeOperations.cs  InvalidEmployeeFileException.cs  InvalidTaskFileException.cs  Program.cs  ReportGenerator.cs  Scheduler.cs  Task.cs  TaskOperations.cs  UserMenu.cs
Frontend_Danush/: README.md  coffee.json  index.html  package-lock.json  script.js  server.cjs  style.css
Kavyasri/: Progress.txt
Lipika_Maadeswaran/: Context.cs  EmployeeData.txt  ImportEmployeeData.cs  ImportTaskData.cs  Program.cs  README.md  Task.txt  TaskManager.cs  Utility.cs
Mahesan Periyasamy/: README.md
sabarish/: employee.csv  pyproject.toml  tasks.csv
sabarish/src/: __main__.py  employee.py  file_operations.py  schedule.py  tasks.py
(+303 files in other folders)
