[tool.poetry]
name = "performance-test"
version = "0.1.0"
description = ""
authors = ["nithish3029 <nithish.sekar@solitontech.com>"]
readme = "README.md"
packages = [{include = "performance_test"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
